--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
                             authority.</p>
                         <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
+                    <div class="service-card glass-panel">
+                        <div class="icon-box"><i class="fa-solid fa-layer-group"></i></div>
+                        <h3>Web Applications</h3>
+                        <p>Scalable, secure, and dynamic web applications tailored to streamline your business
+                            operations.</p>
+                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
