--- a/index.html
+++ b/index.html
@@ -421,6 +421,10 @@
     </div>
 
     <script src="script.js"></script>
+
+    <!-- ElevenLabs Convai Widget -->
+    <elevenlabs-convai agent-id="agent_0001kdmrkvy6e748hwwyxk057jwe"></elevenlabs-convai>
+    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
 </body>
 
 </html>
