--- a/index.html
+++ b/index.html
@@ -103,30 +103,15 @@
             <h2 class="section-title text-center">Our AI Arsenal</h2>
             <div class="services-carousel">
                 <div class="services-track" id="services-track">
-                    <div class="service-card glass-panel">
-                        <div class="icon-box"><i class="fa-solid fa-chart-line"></i></div>
-                        <h3>Predictive Analytics</h3>
-                        <p>Unlock future trends with data-driven insights tailored for your business growth.</p>
-                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
-                    <div class="service-card glass-panel">
-                        <div class="icon-box"><i class="fa-solid fa-eye"></i></div>
-                        <h3>Computer Vision</h3>
-                        <p>Automate visual inspections and recognition tasks with state-of-the-art vision models.</p>
-                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
+
+
                     <div class="service-card glass-panel">
                         <div class="icon-box"><i class="fa-solid fa-language"></i></div>
                         <h3>NLP Solutions</h3>
                         <p>Break language barriers with advanced Natural Language Processing and chatbots.</p>
                         <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
-                    <div class="service-card glass-panel">
-                        <div class="icon-box"><i class="fa-solid fa-robot"></i></div>
-                        <h3>AI Automation</h3>
-                        <p>Streamline workflows and reduce operational costs with intelligent automation.</p>
-                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
+
                     <!-- New Services -->
                     <div class="service-card glass-panel">
                         <div class="icon-box"><i class="fa-solid fa-network-wired"></i></div>
@@ -141,31 +126,10 @@
                         </p>
                         <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
-                    <div class="service-card glass-panel">
-                        <div class="icon-box"><i class="fa-solid fa-headset"></i></div>
-                        <h3>E-Commerce Support AI</h3>
-                        <p>Enhance shopping experiences with instant support and hyper-personalized recommendations.</p>
-                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
-                    <div class="service-card glass-panel">
-                        <div class="icon-box"><i class="fa-solid fa-scale-balanced"></i></div>
-                        <h3>Legal & Compliance AI</h3>
-                        <p>Streamline contract reviews and ensure regulatory adherence with intelligent document
-                            analysis.</p>
-                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
-                    <div class="service-card glass-panel">
-                        <div class="icon-box"><i class="fa-solid fa-industry"></i></div>
-                        <h3>Predictive Maintenance</h3>
-                        <p>Prevent industrial downtime by predicting equipment failures before they occur.</p>
-                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
-                    <div class="service-card glass-panel">
-                        <div class="icon-box"><i class="fa-solid fa-bullhorn"></i></div>
-                        <h3>Lead Gen & Outreach</h3>
-                        <p>Supercharge pipelines with automated identification and personalized, scalable outreach.</p>
-                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-                    </div>
+
+
+
+
                     <div class="service-card glass-panel">
                         <div class="icon-box"><i class="fa-solid fa-share-nodes"></i></div>
                         <h3>Social Media Autopilot</h3>
@@ -417,6 +381,24 @@
             <i class="fa-solid fa-check-circle success-icon"></i>
             <h3>Request Received!</h3>
             <p>Our team will contact you shortly to confirm your demo.</p>
+        </div>
+    </div>
+
+    <!-- Service Detail Modal -->
+    <div id="service-modal" class="service-modal">
+        <div class="glass-panel modal-content">
+            <span class="close-modal-service">&times;</span>
+            <div class="modal-body-content">
+                <div class="modal-image-container">
+                    <img id="modal-service-image" src="" alt="Service Illustration">
+                </div>
+                <div class="modal-text-content">
+                    <h2 id="modal-service-title">Service Title</h2>
+                    <div id="modal-service-description">
+                        <!-- Dynamic Content -->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
