--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                         <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
                     </div>
 
+                    <div class="service-card glass-panel">
+                        <div class="icon-box"><i class="fa-solid fa-comments"></i></div>
+                        <h3>AI Chatbots</h3>
+                        <p>Deploy intelligent conversational agents that engage customers, answer questions, and provide
+                            instant support 24/7.
+                        </p>
+                        <a href="#" class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
 
 
 
