--- a/index.html
+++ b/index.html
@@ -278,6 +278,17 @@
                             <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
                         </a>
                     </div>
+
+                    <!-- SWEET HOMES- BnB -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>SWEET HOMES- BnB</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nakuru, Kenya</p>
+                        </div>
+                        <a href="https://www.sweethomes-bnb.africa/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
