--- a/index.html
+++ b/index.html
@@ -195,102 +195,114 @@
                             <i class="fa-solid fa-flask"></i> Test Application
                         </button>
                     </div>
-                </div>
-            </div>
 
-            <!-- Client Websites Tab Content -->
-            <div class="portfolio-content" id="websites-content">
-                <div class="portfolio-grid client-grid">
-                    <!-- TechBrain -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>TechBrain</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    <!-- SweetStay Application Card -->
+                    <div class="portfolio-card glass-panel">
+                        <div class="portfolio-logo">
+                            <img src="sweetstay_logo.png" alt="SweetStay Logo">
                         </div>
-                        <a href="https://www.techbrain.africa/" target="_blank" class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
-                    </div>
-
-                    <!-- Benno AI -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>Benno AI</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Berlin, Germany</p>
-                        </div>
-                        <a href="https://benno-ai.com/" target="_blank" class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
-                    </div>
-
-                    <!-- EUSMS -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>EUSMS</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
-                        </div>
-                        <a href="https://eusms.org/" target="_blank" class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
-                    </div>
-
-                    <!-- Tyrrst -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>Tyrrst</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Oslo, Norway</p>
-                        </div>
-                        <a href="https://tyrrst.com/" target="_blank" class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
-                    </div>
-
-                    <!-- JITADC -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>JITADC</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
-                        </div>
-                        <a href="https://jitadc.com/" target="_blank" class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
-                    </div>
-
-                    <!-- Pinnacle Dental Centre -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>Pinnacle Dental Centre</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
-                        </div>
-                        <a href="https://www.pinnacledentalcentre.com/" target="_blank" class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
-                    </div>
-
-                    <!-- Dr. Diana Dental Clinic -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>Dr. Diana Dental Clinic</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Eldoret, Kenya</p>
-                        </div>
-                        <a href="https://drdianaandassociatesdentalclinic.co.ke/" target="_blank"
-                            class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
-                    </div>
-
-                    <!-- SWEET HOMES- BnB -->
-                    <div class="client-card glass-panel">
-                        <div class="client-info">
-                            <h3>SWEET HOMES- BnB</h3>
-                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nakuru, Kenya</p>
-                        </div>
-                        <a href="https://www.sweethomes-bnb.africa/" target="_blank" class="btn btn-outline">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                        </a>
+                        <h3>SweetStay</h3>
+                        <p>Modern, lightweight booking management system for Airbnbs and guest houses</p>
+                        <button class="btn btn-primary glow-effect" onclick="window.openServiceModal('sweetstay')">
+                            <i class="fa-solid fa-list-check"></i> View Features
+                        </button>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Client Websites Tab Content -->
+        <div class="portfolio-content" id="websites-content">
+            <div class="portfolio-grid client-grid">
+                <!-- TechBrain -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>TechBrain</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    </div>
+                    <a href="https://www.techbrain.africa/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+
+                <!-- Benno AI -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>Benno AI</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Berlin, Germany</p>
+                    </div>
+                    <a href="https://benno-ai.com/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+
+                <!-- EUSMS -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>EUSMS</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    </div>
+                    <a href="https://eusms.org/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+
+                <!-- Tyrrst -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>Tyrrst</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Oslo, Norway</p>
+                    </div>
+                    <a href="https://tyrrst.com/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+
+                <!-- JITADC -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>JITADC</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    </div>
+                    <a href="https://jitadc.com/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+
+                <!-- Pinnacle Dental Centre -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>Pinnacle Dental Centre</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    </div>
+                    <a href="https://www.pinnacledentalcentre.com/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+
+                <!-- Dr. Diana Dental Clinic -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>Dr. Diana Dental Clinic</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Eldoret, Kenya</p>
+                    </div>
+                    <a href="https://drdianaandassociatesdentalclinic.co.ke/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+
+                <!-- SWEET HOMES- BnB -->
+                <div class="client-card glass-panel">
+                    <div class="client-info">
+                        <h3>SWEET HOMES- BnB</h3>
+                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nakuru, Kenya</p>
+                    </div>
+                    <a href="https://www.sweethomes-bnb.africa/" target="_blank" class="btn btn-outline">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                    </a>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
