--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@
 
             <!-- Tab Navigation -->
             <div class="portfolio-tabs">
-                <button class="portfolio-tab active" data-tab="webapps">
+                <button class="portfolio-tab" data-tab="webapps">
                     <i class="fa-solid fa-code"></i> Web Applications
                 </button>
-                <button class="portfolio-tab" data-tab="websites">
+                <button class="portfolio-tab active" data-tab="websites">
                     <i class="fa-solid fa-globe"></i> Client Websites
                 </button>
             </div>
 
             <!-- Web Applications Tab Content -->
-            <div class="portfolio-content active" id="webapps-content">
+            <div class="portfolio-content" id="webapps-content">
                 <div class="portfolio-grid">
                     <!-- myDOC Application Card -->
                     <div class="portfolio-card glass-panel">
@@ -212,94 +212,97 @@
         </div>
 
         <!-- Client Websites Tab Content -->
-        <div class="portfolio-content" id="websites-content">
-            <div class="portfolio-grid client-grid">
-                <!-- TechBrain -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>TechBrain</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+        <div class="portfolio-content active" id="websites-content">
+            <div class="scene">
+                <div class="carousel-3d">
+                    <!-- TechBrain -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>TechBrain</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                        </div>
+                        <a href="https://www.techbrain.africa/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://www.techbrain.africa/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
-                </div>
 
-                <!-- Benno AI -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>Benno AI</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Berlin, Germany</p>
+                    <!-- Benno AI -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>Benno AI</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Berlin, Germany</p>
+                        </div>
+                        <a href="https://benno-ai.com/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://benno-ai.com/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
-                </div>
 
-                <!-- EUSMS -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>EUSMS</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    <!-- EUSMS -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>EUSMS</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                        </div>
+                        <a href="https://eusms.org/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://eusms.org/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
-                </div>
 
-                <!-- Tyrrst -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>Tyrrst</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Oslo, Norway</p>
+                    <!-- Tyrrst -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>Tyrrst</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Oslo, Norway</p>
+                        </div>
+                        <a href="https://tyrrst.com/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://tyrrst.com/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
-                </div>
 
-                <!-- JITADC -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>JITADC</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    <!-- JITADC -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>JITADC</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                        </div>
+                        <a href="https://jitadc.com/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://jitadc.com/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
-                </div>
 
-                <!-- Pinnacle Dental Centre -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>Pinnacle Dental Centre</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                    <!-- Pinnacle Dental Centre -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>Pinnacle Dental Centre</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nairobi, Kenya</p>
+                        </div>
+                        <a href="https://www.pinnacledentalcentre.com/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://www.pinnacledentalcentre.com/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
-                </div>
 
-                <!-- Dr. Diana Dental Clinic -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>Dr. Diana Dental Clinic</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Eldoret, Kenya</p>
+                    <!-- Dr. Diana Dental Clinic -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>Dr. Diana Dental Clinic</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Eldoret, Kenya</p>
+                        </div>
+                        <a href="https://drdianaandassociatesdentalclinic.co.ke/" target="_blank"
+                            class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://drdianaandassociatesdentalclinic.co.ke/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
-                </div>
 
-                <!-- SWEET HOMES- BnB -->
-                <div class="client-card glass-panel">
-                    <div class="client-info">
-                        <h3>SWEET HOMES- BnB</h3>
-                        <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nakuru, Kenya</p>
+                    <!-- SWEET HOMES- BnB -->
+                    <div class="client-card glass-panel">
+                        <div class="client-info">
+                            <h3>SWEET HOMES- BnB</h3>
+                            <p class="client-location"><i class="fa-solid fa-location-dot"></i> Nakuru, Kenya</p>
+                        </div>
+                        <a href="https://www.sweethomes-bnb.africa/" target="_blank" class="btn btn-outline">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
+                        </a>
                     </div>
-                    <a href="https://www.sweethomes-bnb.africa/" target="_blank" class="btn btn-outline">
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i> View Website
-                    </a>
                 </div>
             </div>
         </div>
